make my profile prettier

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
         <p>Si le silence est d'or, le bruit est de métal</p>
     </div>
     <div class="card">
-      <h3>Les réseaux // H3</h3>
+      <h3>Les réseaux</h3>
         <ul>
-          <li><a href="#">
+          <li><a href="https://tenor.com/view/happy-happy-dog-dog-happiest-dog-super-happy-gif-17885812" target="_blank">
             <i class="fa-sharp fa-solid fa-poo"></i> skyblog
         </a>
       </li><li>
-        <a href="#">
+        <a href="https://tenor.com/view/smile-and-wave-just-old-gif-22024541" target="_blank">
           <i class="fa-sharp fa-solid fa-wand-magic-sparkles"></i> myspace
             </a></li>
-      <li>  <a href="#">
+      <li>  <a href="https://www.linkedin.com/in/alexandre-courivaud/" target="_blank">
         <i class="fab fa-linkedin"></i> linkedin
           </a>
         </li>
