make my profile prettier

--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
     </div>
     <div class="card">
       <h2> Comme dit le grand sage :</h2>
-        <p>Si le silence est d'or, le bruit est de métal</p>
+        <p>🤘🔥Si le silence est d'or, le bruit est de métal!🔥🤘</p>
     </div>
     <div class="card">
       <h3>Les réseaux</h3>
         <ul>
-          <li><a href="https://tenor.com/view/happy-happy-dog-dog-happiest-dog-super-happy-gif-17885812" target="_blank">
+          <li><a href="https://media.tenor.com/6xwjsmMIAIoAAAAd/happy-happy-dog.gif" target="_blank">
             <i class="fa-sharp fa-solid fa-poo"></i> skyblog
         </a>
       </li><li>
-        <a href="https://tenor.com/view/smile-and-wave-just-old-gif-22024541" target="_blank">
+        <a href="https://media.tenor.com/lwScjCRTln8AAAAC/smile-and.gif" target="_blank">
           <i class="fa-sharp fa-solid fa-wand-magic-sparkles"></i> myspace
             </a></li>
       <li>  <a href="https://www.linkedin.com/in/alexandre-courivaud/" target="_blank">
