--- a/index.html
+++ b/index.html
@@ -13,27 +13,27 @@
   <div class="container">
     <div class="card">
       <h1> Coucou</h1>
-        <p> Alex Courivaud</p>
+        <p>Je suis Alexandre Courivaud!</p>
         <img src="images/Image0096.jpg" id="pikachu" alt="pika pika">
         <p>pika pika, j'aime bien le saucisson et le paté</p>
-      <a href="https://hellfest.fr" target="_blank">Un lien de DINGUE</a>
+      <a href="https://hellfest.fr" target="_blank"> --> Un lien de DINGUE !! <-- </a>
     </div>
     <div class="card">
       <h2> Comme dit le grand sage :</h2>
-        <p>Si le silence est d'or, le bruit est de métal</p>
+        <p>🤘🔥Si le silence est d'or, le bruit est de métal!🔥🤘 </p>
     </div>
     <div class="card">
       <h3>Les réseaux</h3>
         <ul>
-          <li><a href="https://tenor.com/view/happy-happy-dog-dog-happiest-dog-super-happy-gif-17885812" target="_blank">
-            <i class="fa-sharp fa-solid fa-poo"></i> skyblog
+          <li><a href="https://media.tenor.com/6xwjsmMIAIoAAAAd/happy-happy-dog.gif" target="_blank">
+            <i class="fa-sharp fa-solid fa-poo"></i> Skyblog
         </a>
       </li><li>
-        <a href="https://tenor.com/view/smile-and-wave-just-old-gif-22024541" target="_blank">
-          <i class="fa-sharp fa-solid fa-wand-magic-sparkles"></i> myspace
+        <a href="https://media.tenor.com/lwScjCRTln8AAAAC/smile-and.gif" target="_blank">
+          <i class="fa-sharp fa-solid fa-wand-magic-sparkles"></i> Myspace
             </a></li>
       <li>  <a href="https://www.linkedin.com/in/alexandre-courivaud/" target="_blank">
-        <i class="fab fa-linkedin"></i> linkedin
+        <i class="fab fa-linkedin"></i> Linkedin
           </a>
         </li>
           </ul>
@@ -42,3 +42,4 @@
 
     </body>
 </html>
+
